objects/IntegrationLogItem__c.object
<CustomObject>
    <description>Integration log items maintained</description>
    <fields>
        <fullName>APIRequest__c</fullName>
        <description>This Field will store Symx API Request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>APIRequest</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APIResponse__c</fullName>
        <description>This filed will store response received from symx</description>
        <encryptionScheme>None</encryptionScheme>
        <label>APIResponse</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApiName__c</fullName>
        <description>Used for logging the api name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field will link Application object with IntegrationLog__c object</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Integration Log Items</relationshipLabel>
        <relationshipName>Integration_Log_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntegrationLog__c</fullName>
        <description>Hold the reference of IntegrationLog object</description>
        <label>Integration Log</label>
        <referenceTo>IntegrationLog__c</referenceTo>
        <relationshipLabel>IntegrationLogs</relationshipLabel>
        <relationshipName>IntegrationLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Used to store success or failure message of particular api</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked Party Object with integrationLogItem</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Integration Log Items</relationshipLabel>
        <relationshipName>Integration_Log_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <description>Stores request body of apis</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Body</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseBody__c</fullName>
        <description>Stores the entire response body of particular api</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Body</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stores success or failure status of the particular api</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubRecord__c</fullName>
        <description>Sub Record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Log Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Log Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>